# turtlebot3_robopico

./: .gitignore  99-turtlebot3-pico.rules  README.md  auto_calibrate_imu_turn.py  boot.py  calibrate_deadzone.py  calibrate_imu_gravity.py  calibrate_linear.py  debug_bno085.py  dxl_calibration_cli.py  flash_and_bringup.sh  main.py  straight_calibrate.py  test_bringup.sh  test_bulk_read.py  test_calibration.py  test_imu.py  test_movement.py  test_odom.py  test_ros_sim.py  test_turn_direction.py
config/: burger_pico.yaml
firmware/: AGENTS.md  CMakeLists.txt  README.md  build.sh  main.c  tusb_config.h  usb_descriptors.c
lds01_emulator/: AGENTS.md  CMakeLists.txt  build.sh  main.cpp  tusb_config.h  usb_descriptors.cpp
